[package]
name = "gbcemu"
version = "0.1.0"
authors = ["16meyrat <louis.meyrat@mines-paristech.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
sdl2 = "0.35"
arrayvec = "0.7"
anyhow = "1"
cpal = { version = "0.15" }

[features]
audio-log = []
disasm = []

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
strip = true